--- a/prepros.config
+++ b/prepros.config
@@ -931,6 +931,24 @@
         "config": {
           "compileImported": true
         }
+      },
+      {
+        "file": "scss/game.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/null.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/works.scss",
+        "config": {
+          "compileImported": true
+        }
       }
     ]
   }
